fix footer z-index and theme dialog

--- a/StoicDreams.BlazorUI/wwwroot/sd-blazorui.1.1.18.css
+++ b/StoicDreams.BlazorUI/wwwroot/sd-blazorui.1.1.18.css
@@ -628,7 +628,7 @@ pre > code {
 	position: absolute;
 	left: 0;
 	width: 100%;
-	z-index: 9999;
+	z-index: 900;
 }
 
 	.bui-paper.bui-footer * {
